# ForgeAI

./: .env.example  .gitignore  ForgeAI-Presentation.pptx  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  agents_runtime.py  benchmark_store.py  config.py  failure_kb.py  github_execute.py  github_propose.py  github_runtime.py  logging.py  main.py  memory_runtime.py  observability_runtime.py  performance.py  pr_approvals.py  projects.py
apps/api/app/api/: __init__.py  agents.py  analytics.py  auth.py  github.py  health.py  integrations.py  observability.py  organizations.py  projects.py
apps/api/app/auth/: __init__.py  deps.py  revocation.py  security.py
apps/api/app/db/: __init__.py  base.py  models.py
apps/api/app/services/: __init__.py
apps/api/tests/: conftest.py  test_agents_endpoint.py  test_analytics_api.py  test_approval_center.py  test_auth.py  test_benchmarks.py  test_debate.py  test_docker_tool.py  test_evaluation.py  test_execution_agent_integration.py  test_execution_engine.py  test_execution_errors.py  test_execution_extras.py  test_execution_security.py  test_failure_kb.py  test_filesystem_tool.py  test_first_run_e2e.py  test_git_agent_workflow_integration.py  test_git_tool.py  test_github_approval_workflow.py  test_github_local_repo.py  test_github_provider.py  test_github_rest_support.py  test_github_runtime.py  test_github_webhooks.py  test_github_workflow.py  test_github_workflow_api.py  test_health.py  test_health_metrics_api.py  test_integration_honesty.py  test_integration_hub.py  test_integrations_connectors.py  test_integrations_knowledge.py  test_learning.py  test_marketplace.py  test_memory.py  test_memory_agent_integration.py  test_model_router.py  test_observability.py  test_observability_api.py  (+17 more)
docs/: DECISIONS.md  README.md  agents.md  api.md  architecture.md  auth.md  contributing.md  database.md  decisions.md  deployment.md  execution.md  github.md  integrations.md  memory.md  observability.md  production.md  prompts.md  roadmap.md  security.md  setup.md  state.md  testing.md  tools.md  workflows.md
scripts/: demo-pr.sh  demo-todo-e2e.sh  demo_phase12.py  make_deck.py  make_examples_pdf.py  pull-models.sh  verify-github.sh  wait-api.sh
specs/: README.md  agent-spec.md  api-contracts.md  auth-spec.md  evaluation-spec.md  rag-spec.md  (+12 more)
(+71 files in other folders)
