[project]
name = "forge-api"
version = "0.1.0"
description = "ForgeAI backend — FastAPI API layer and agent orchestration entrypoint."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "loguru>=0.7",
    "httpx>=0.27",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "black>=24.10",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Make the repo-root shared packages importable in tests (core, models, agents, tools, prompts).
pythonpath = [".", "../../packages"]

[tool.uv]
package = false
